manifests/simulator/simulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepsea-simulator-service
spec:
  selector:
    app: deepsea-simulator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
  type: NodePort
