manifests/simulator/simulator-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simulator-ingress
spec:
  backend:
    serviceName: deepsea-simulator-service
    servicePort: 80
